# aivis-openai-tts-bridge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/aivis_openai_tts_bridge/: aivis_client.py  config.py  main.py  voice_resolver.py
tests/: conftest.py  test_api.py  test_voice_resolver.py
