[project]
name = "aivis-openai-tts-bridge"
version = "0.1.0"
description = "OpenAI TTS API-compatible bridge for AivisSpeech Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.32.0",
]

[project.urls]
Documentation = "https://github.com/likeablob/aivis-openai-tts-bridge"
Source = "https://github.com/likeablob/aivis-openai-tts-bridge"

[project.scripts]
aivis-openai-tts-bridge = "aivis_openai_tts_bridge.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/.env.example",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aivis_openai_tts_bridge"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.0",
    "ty>=0.0.23",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ty.rules]
invalid-parameter-default = "ignore"
